--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/pg": "^8.10.2",
+    "@types/validator": "^13.7.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
