add tests for check invalid data in REST API: GET /

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest ./tests/lesson.test.ts",
     "build": "tsc",
     "dev": "nodemon ./build/index.js",
     "start-dev": "tsc && npm run dev"
