--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changeme
 POSTGRES_DB=postgres
+APP_PORT=8000
+APP_HOST=http://localhost
